<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.cdsframework</groupId>
    <artifactId>ice</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>25</java.version>
        <maven.compiler.proc>full</maven.compiler.proc>

        <drools.version>10.1.0</drools.version>
        <guava.version>33.5.0-jre</guava.version>
        <jaxb-maven-plugin.version>4.0.12</jaxb-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-core</artifactId>
                <version>10.1.0-20250815</version>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-kiesession</artifactId>
                <version>10.1.0-20250814</version>
            </dependency>
            <dependency>
                <groupId>com.github.javaparser</groupId>
                <artifactId>javaparser-core</artifactId>
                <version>[3.27.1,)</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>my-local-repo</id>
            <url>file://${maven.multiModuleProjectDirectory}/local-repo</url>
            <releases>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </repository>
    </repositories>

    <modules>
        <module>opencds-decision-support-opencds</module>
        <module>opencds-decision-support-generated</module>
        <module>opencds-decision-support-core</module>
        <module>opencds-decision-support-rules</module>
        <module>opencds-decision-support-service</module>
    </modules>
</project>
